@@ -1,5 +1,9 @@
 *SVN*
 
+* Added that controllers will now attempt to require a model dependency with their name and in a singular attempt for their name.
+  So both PostController and PostsController will automatically have the post.rb model required. If no model is found, no error is raised,
+  as it is then expected that no match is available and the programmer will have included his own models.
+
 * Fixed DateHelper#date_select so that you can pass include_blank as an option even if you don't use start_year and end_year #59 [what-a-day]
 
 * Added that controllers will now search for a layout in $template_root/layouts/$controller_name.r(html|xml), so PostsController will look
